--- a/ToDoListReact/index.html
+++ b/ToDoListReact/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script
       src="https://unpkg.com/react@18/umd/react.development.js"crossorigin></script>
     <script
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="./Task.js " type="text/babel" defer></script>
+    <script src="script.js" type="text/babel" defer></script>
     <title>Document</title>
   </head>
   <body id="body">
